Fix: granted permission to docker build by adding 'sudo' in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
             git clone https://github.com/Ugbe/hng12-stage2-fastapi-book-project.git
             cd hng12-stage2-fastapi-book-project/
             git pull
-            docker-compose up -d --build
+            sudo docker-compose up -d --build
