--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -20,3 +20,6 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: pytest
+      - name: test checking
+        run: |
+          dotnet build --configuration Release
