Feat: added the branch protection rules

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 13.88.100.86;
+    server_name ${{ secrets.SSH_HOST }};
     location / {
         proxy_pass http://app:8000;
         proxy_set_header Host $host;
